fixed incorrect spacing on lyrics page

--- a/src/css.css
+++ b/src/css.css
@@ -215,7 +215,7 @@ footer .copyright-copy, footer .copyright-last-year {
 .content-404 {text-align: center;}
 
 .content-lyrics .lyrics-wrapper {
-	margin: 2.5em 0.4em 0;
+	margin: 0 0.4em;
 	text-align: center;
 }
 .content-lyrics .english-translation-link {
